--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,20 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../CSS/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="header">
-        <div class="header-img">
-            <img src="/IMAGE/logo_organic.png" alt="Spotify">
+        <div class="header-logo">
+            <img src="/IMAGE/logo_organic.png" alt="logo_organic">
         </div>
-        <div class="header-item">
-            <ul>
-                <li><a href="">Trang chủ</a></li>
-                <li><a href="">Giới thiệu</a></li>
-                <li><a href="">Cửa hàng</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Liên hệ</a></li>
-            </ul>
+        </div>
+            <div class="header-item">
+                <ul>
+                    <li><a href="">Trang chủ</a></li>
+                    <li><a href="">Giới thiệu</a></li>
+                    <li><a href="">Cửa hàng</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Liên hệ</a></li>
+                </ul>
+                <div class="header-item__icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+                <div class="header-item__dangnhap">
+                    <button>Đăng nhâp / Đăng kí </button>
+                </div>
+                <div class="header-item__giohang">
+                    <button>
+                        Giỏ hàng
+                        <i class="fa-solid fa-cart-shopping" style="color: #0dc56f;"></i>                
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
     <div class="container">
@@ -26,24 +41,35 @@
             <img src="/IMAGE/Anh1.png" alt="Ảnh 1">
         </div>
         <div class="container-imgs">
-            <img src="/IMAGE/Anh2.jfif" alt="Ảnh 2">
-            <img src="/IMAGE/Anh3.jfif" alt="Ảnh 3">
+            <div class="navbar">
+                <img src="/IMAGE/Anh2.jfif" alt="Ảnh 2">
+            </div>
+            <div class="navbar">
+                <img src="/IMAGE/Anh3.jfif" alt="Ảnh 3">
+            </div>
         </div>
     </div>
     <h1 style="text-align: center;">Sản phẩm mới</h1>
     <div class="product">
         <div class="product-items">
             <img src="/IMAGE/hanh_tay.jfif" alt="Hành tây">
-            <span>Nong san</span>
+            <span>Hành tây</span>
+            <span>25.000đ</span>
         </div>
         <div class="product-items">
             <img src="/IMAGE/bap_my.jfif" alt="Bắp Mỹ">
+            <span>Bắp Mỹ</span>
+            <span>35.000đ</span>
         </div>
         <div class="product-items">
             <img src="/IMAGE/chanh.jfif" alt="Chanh">
+            <span>Chanh</span>
+            <span>15.500đ</span>
         </div>
         <div class="product-items">
             <img src="/IMAGE/dua_leo.jfif" alt="Dưa leo">
+            <span>Dưa leo</span>
+            <span>18.000đ</span>
         </div>
     </div>
     
