--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,38 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/CSS/main.css">
 </head>
 <body>
     <div class="header">
         <div class="header-logo">
             <img src="/IMAGE/logo_organic.png" alt="logo_organic">
         </div>
-        </div>
-            <div class="header-item">
-                <ul>
-                    <li><a href="">Trang chủ</a></li>
-                    <li><a href="">Giới thiệu</a></li>
-                    <li><a href="">Cửa hàng</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Liên hệ</a></li>
-                </ul>
-                <div class="header-item__icon">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
-                <div class="header-item__dangnhap">
-                    <button>Đăng nhâp / Đăng kí </button>
-                </div>
-                <div class="header-item__giohang">
-                    <button>
-                        Giỏ hàng
-                        <i class="fa-solid fa-cart-shopping" style="color: #0dc56f;"></i>                
-                    </button>
-                </div>
+        <div class="header-item">
+            <ul>
+                <li><a href="">Trang chủ</a></li>
+                <li><a href="">Giới thiệu</a></li>
+                <li><a href="">Cửa hàng</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Liên hệ</a></li>
+            </ul>
+            <div>
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            <div class="header-item__dangnhap">
+                <button>Đăng nhâp / Đăng kí </button>
+            </div>
+            <div class="header-item__giohang">
+                <button>
+                    Giỏ hàng
+                    <i class="fa-solid fa-cart-shopping" style="color: #0dc56f;"></i>                
+                </button>
             </div>
         </div>
+        
+    </div> 
     </div>
+            
     <div class="container">
         <div class="container-img">
             <img src="/IMAGE/Anh1.png" alt="Ảnh 1">
